--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "faker": "^5.5.3",
     "mongoose": "^8.12.1",
+    "query-string": "^9.1.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1"
   }
